--- a/typing/src/index.css
+++ b/typing/src/index.css
@@ -18,6 +18,7 @@ code {
   height: 30vh;
   overflow-x: hidden; /* Hide horizontal overflow */
   border: 1px solid #ccc;
+  color: black;
   
 }
 p{
@@ -38,4 +39,5 @@ textarea{
   height: 30vh;
   overflow-x: hidden; /* Hide horizontal overflow */
   border: 1px solid #ccc;
+  color: black;
 }
